search-service/main/default/objects/Search_Component_Display_Setting__mdt/Search_Component_Display_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Search Component Display Setting</label>
    <pluralLabel>Search Component Display Settings</pluralLabel>
</CustomObject>