search-service/main/default/objects/Search_Component_Display_Setting__mdt/fields/Search_Component_Setting__c.field-meta.xml
<CustomField>
    <fullName>Search_Component_Setting__c</fullName>
    <label>Search Component Setting</label>
    <referenceTo>Search_Component_Setting__mdt</referenceTo>
    <relationshipLabel>Search Component Display Settings</relationshipLabel>
    <relationshipName>Search_Component_Display_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>